Revision history for Perl extension PPI

{{$NEXT}}
	Summary:
	- return correct name for lexical subroutines
	- silence uninitialized warning in t/07_token.t
	- bump minimum Test::More version to 0.96
	- fix some typos in Pod

1.270   2019-07-09 15:14:57Z
	Summary:
	- attempt to handle new blead binary/hexadecimal parsing behavior in tests

1.269   2019-05-17 18:36:46Z
	Summary:
	- many small documentation improvements

1.268   2019-05-16 10:00:39Z
	Summary:
	- fix a broken link in the pod

1.267   2019-05-16 09:22:34Z
	Summary:
	- make PPI::Test::Run more OS-agnostic

1.266   2019-05-15 16:17:49Z
	Summary:
	- keep heredoc terminator detection from triggering regex errors
	- small cleanups

	Details:
	- make the output of PPI::Test::Run more useful
	- remove a superfluous import

1.265   2019-05-14 12:39:51Z
	Summary:
	- simplified a code construct

1.264   2019-04-28 14:56:28Z
	Summary:
	- keep vstring processing from swallowing underscores

1.262   2019-04-28 11:41:54Z
	Summary:
	- convert newlines in some raw test files from win32 to unix

1.260   2019-04-28 11:10:02Z
	Summary:
	- allow underscores in vstrings

1.258   2019-04-27 17:05:33Z
	Summary:
	- remove accidentally included Test::InDistDir

1.256   2019-04-26 16:40:01Z
	Summary:
	- allow all PPI::Document instances to have a filename attribute

1.254   2019-04-26 16:23:21Z
	Summary:
	- recognize `for (;<$foo>;) {}` as containing a readline operator

1.252   2019-04-26 14:21:36Z
	Summary:
	- add support for the double diamond (<<>>) input operator
	- adjust position of a todo marker to not catch a passing test

1.250   2019-04-25 16:43:32Z
	Summary:
	- various smaller releng changes

	Details:
	- removed dependency on File::Remove
	- add some tests including a TODO test for misparse bug on '(1)-1'
	- allow tests to run without pre-determined module versions
	- add travis-perl helper to be run before install
	- update versions of Perl Travis tests on

1.248   2019-04-25 16:08:08Z
	Summary: