@@ -5,9 +5,9 @@ copyright_holder = Adam Kennedy
 copyright_year   = 2002
 
 [MetaResources]
-homepage   = https://github.com/adamkennedy/PPI
-bugtracker = https://github.com/adamkennedy/PPI/issues
-repository = https://github.com/adamkennedy/PPI
+homepage   = https://github.com/Perl-Critic/PPI
+bugtracker = https://github.com/Perl-Critic/PPI/issues
+repository = https://github.com/Perl-Critic/PPI
 
 [Encoding] ; exclude paths from autoprereqs detection
 encoding = bytes
